src/test/ui/hrtb/hrtb-cache-issue-54302.nll.stderr
error: higher-ranked subtype error
  --> $DIR/hrtb-cache-issue-54302.rs:19:5
   |
LL |     assert_deserialize_owned::<&'static str>();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

